# RAG

./: README.md
rag_doc_qa_pro_plus/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
rag_doc_qa_pro_plus/app/api/: main.py  models.py
rag_doc_qa_pro_plus/app/core/: config.py  logging.py  schemas.py
rag_doc_qa_pro_plus/app/evaluation/: evaluate.py
rag_doc_qa_pro_plus/app/ingestion/: chunker.py  ingestor.py  loaders.py
rag_doc_qa_pro_plus/app/llm/: base.py  factory.py  mock_client.py  ollama_client.py  openai_client.py
rag_doc_qa_pro_plus/app/retrieval/: bm25.py  detail_retriever.py  embeddings.py  fusion.py  hybrid_retriever.py  reranker.py  vector_store.py
rag_doc_qa_pro_plus/app/services/: prompts.py  rag_service.py
rag_doc_qa_pro_plus/app/training/: dataset_builder.py  io.py  train_embedder.py  train_reranker.py
rag_doc_qa_pro_plus/app/utils/: file_utils.py
rag_doc_qa_pro_plus/data/eval/: questions.jsonl
rag_doc_qa_pro_plus/data/raw/: README.md
rag_doc_qa_pro_plus/data/training/: README.md
rag_doc_qa_pro_plus/docs/: ARCHITECTURE_CN.md  TRAINING_AND_DETAIL_RETRIEVAL_CN.md
rag_doc_qa_pro_plus/rag_doc_qa_pro.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
rag_doc_qa_pro_plus/scripts/: ask_cli.py  build_training_data.py  detail_search_cli.py  ingest_cli.py  train_embedder.py  train_reranker.py
rag_doc_qa_pro_plus/tests/: test_chunker.py  test_detail_utils.py  test_fusion.py
rag_doc_qa_pro_plus/ui/: streamlit_app.py
