[project]
name = "rag-doc-qa-pro"
version = "1.1.0"
description = "Production-style RAG document QA system with hybrid retrieval, reranking, detail search, training pipelines, citations, API and UI."
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "python-multipart>=0.0.9",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "chromadb>=0.5.0",
  "sentence-transformers>=3.0.0",
  "rank-bm25>=0.2.2",
  "pymupdf>=1.24.0",
  "python-docx>=1.1.0",
  "pandas>=2.2.0",
  "openpyxl>=3.1.0",
  "tabulate>=0.9.0",
  "beautifulsoup4>=4.12.0",
  "markdown>=3.6",
  "httpx>=0.27.0",
  "numpy>=1.26.0",
  "rich>=13.7.0",
  "streamlit>=1.36.0",
  "pytest>=8.2.0"
]

[project.optional-dependencies]
openai = ["openai>=1.40.0"]
quality = ["ruff>=0.5.0", "mypy>=1.10.0"]
training = ["torch>=2.1.0"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["data*", "docs*", "scripts*", "tests*", "ui*"]
